[gd_scene load_steps=5 format=2]

[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://DialogBox.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.231373, 0.333333, 0.615686, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.168627, 0.239216, 0.447059, 1 )

[sub_resource type="DynamicFont" id=2]
size = 47
font_data = ExtResource( 1 )

[node name="DialogBox" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="DialogBoxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0

[node name="BoxColor" type="Panel" parent="DialogBoxContainer"]
margin_right = 1228.0
margin_bottom = 200.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="DialogBoxContainer"]
margin_right = 1228.0
margin_bottom = 200.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="Panel" type="Panel" parent="DialogBoxContainer/MarginContainer"]
visible = false
margin_left = 32.0
margin_top = 32.0
margin_right = 1196.0
margin_bottom = 168.0

[node name="HBoxContainer" type="HBoxContainer" parent="DialogBoxContainer/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1196.0
margin_bottom = 168.0

[node name="StartSymbol" type="Label" parent="DialogBoxContainer/MarginContainer/HBoxContainer"]
margin_right = 29.0
margin_bottom = 56.0
rect_min_size = Vector2( 29, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 2 )

[node name="Text" type="Label" parent="DialogBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 33.0
margin_right = 1131.0
margin_bottom = 136.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
autowrap = true
clip_text = true

[node name="EndSymbol" type="Label" parent="DialogBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 1135.0
margin_top = 80.0
margin_right = 1164.0
margin_bottom = 136.0
rect_min_size = Vector2( 29, 0 )
size_flags_vertical = 8
custom_fonts/font = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
